# uni

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
2 term/Computer Science/: Шаблон отчёта.docx
2 term/Practice/: Report.docx  Report.odt
2 term/Programming C/: Lab_6.rarr  Шаблон отчёта.docx
3 term/Programming (Python)/: ЛБ01.docx  Шаблон отчёта.odt
3 term/Structures and Algorithms/: Задание.docx  Задачи - сортировки.docx
3 term/Structures and Algorithms/Lab 3/: .clangd  CMakeLists.txt  GNUmakefile  HashTable.hpp  main.cpp  prog.cpp  ДощечкаМешанины.hpp  ЛР3.docx  знание_древних.h
3 term/Structures and Algorithms/Lab 3/fplot/: plot.f90
3 term/Structures and Algorithms/Lab 3/include/: HHashTable.h
3 term/Structures and Algorithms/Lab 3/interface/: HHashTable.cpp
3 term/Structures and Algorithms/Lab 3/lib/: pyplot_module.f90
4 term/Automata Theory/: Lab 1.odt  Lab 2.odt  Lab 3.odt  Titles.odt
4 term/Circuit Design/: Lab 1.odt  Lab 2.odt  Lab 3.odt  Lab 4.odt
4 term/Databases/: report-1.odt  report-2.odt  report-3.odt  report-5-6.odt  report-5.odt  report-6.odt
4 term/Engineering Graphics/: .gitignore  Lab 2 Model.m3d  Lab 2.cdw  Lab 3-A.cdw  Lab 4.cdw  Lab 5 Model.m3d  Lab 5.cdw  Lab 6 Model.m3d  Lab 6.cdw  Lab 7 (1).cdw  Lab 7 (2).cdw  Lab 7 Assembly.cdw  Lab 8.spw  README.md
4 term/Philosophy/: Эссе - роль личности в истории.odt  практическое 2.odt  практическое 3.odt  практическое 5.odt  практическое 6.1.odt  практическое 6.2.odt  практическое 6.3.odt
5 term/Computer Graphics/: Makefile  main.cpp
BackelorThesis/: .gitignore  justfile  plan.md  template.typ  thesis.typ
Term1/Entrance to C/: README.md
Term1/EntranceToC/: CMakeLists.txt  README.md  common.typ  justfile
Term2/Practice/: Report.docx  Report.odt  Блоксхема ЛР2-2.odg  Блоксхема ЛР3.odg  Блоксхема ЛР4.odg
Term2/Programming C/: Шаблон отчёта.docx
Term2/Programming C++/: Шаблон отчёта.docx
Term3/Structures and Algorithms/: Задание.docx  Задачи - сортировки.docx
Term4/Automata Theory/: Lab 2.odt  Lab_3_Circuit.circ  Titles.odt
Term4/Circuit Design/: Lab 1.odt  Lab 3.odt  Lab 4.odt  Lab 5.odt  Lab 6.odt  Titles.odt
Term4/Databases/: report-1.odt  report-2.odt  report-3.odt  report-4.odt  report-5-6.odt
Term4/Databases/fbook/: Cargo.toml
Term4/Databases/fbook/migrations/: 20240510201331_drop.sql  20240510201342_fill.sql
Term4/Databases/fbook/src/: main.rs
Term4/Engineering Graphics/: Lab 1.cdw  Lab 2.cdw  Lab 3-B.cdw  Lab 5.cdw  Lab 6.cdw  Lab 7 (2).cdw
Term4/Philosophy/: Эссе - роль личности в истории.odt  практическое 1.odt  практическое 3.odt  практическое 4.odt  практическое 6.1.odt  практическое 6.3.odt  практическое 7.odt
Term5/Computer Graphics/: .gitignore  Cargo.toml  README.md  glfw3webgpu.cpp  index.html  main.cpp
Term5/Computer Graphics/course-project/: Cargo.toml  course-project.odt
Term5/Computer Graphics/course-project/src/: app.rs  lib.rs  main.rs  shader.wgsl
Term5/Computer Graphics/framework/: Cargo.toml
Term5/Computer Graphics/framework/src/: app.rs  evloop.rs  gpu.rs  lib.rs
Term5/Computer Graphics/lab1/: Cargo.toml  lab-1.odt
Term5/Computer Graphics/lab1/src/: app.rs  lib.rs  main.rs  model.rs  shader.wgsl
Term5/Computer Graphics/lab2/: Cargo.toml  lab-2.odt
Term5/Computer Graphics/lab2/src/: app.rs  lib.rs  main.rs  model.rs  shader.wgsl
Term5/Computer Graphics/lab3/: Cargo.toml  lab-3.odt
Term5/Computer Graphics/lab3/src/: app.rs  camera.rs  color.rs  instance.rs  lib.rs  light.rs  light.wgsl  main.rs  material.rs  model.rs  render.rs  shader.wgsl  texture.rs
Term5/Computer Graphics/src/: app.rs  lib.rs  main.rs
Term5/Computer Graphics/src/components/lab/: full_name.rs  lightning.rs
Term5/Computer Graphics/src/pages/: lab.rs
Term5/Computer Graphics/web/: Cargo.toml  Dockerfile  Trunk.toml  fly.toml  index.html  nginx.conf
Term5/Computer Graphics/web/src/: app.module.scss  app.rs  main.rs
Term5/Computer Graphics/web/src/components/: gpu_app.rs  header.module.scss  header.rs  mod.rs  nav_link.module.scss  nav_link.rs
Term5/Computer Graphics/web/src/components/lab/: full_name.rs  lab1.rs  mod.rs
Term5/Computer Graphics/web/src/pages/: about.rs  gpu_app.module.scss  gpu_app.rs  index.module.scss  index.rs  lab.rs  mod.rs
Term5/Databases/: lab-1.odt  lab-2.odt  practice-1.odt  practice-2.odt  practice-3.odt  practice-4.odt  practice-5.odt  practice-6.odt  practice-7.odt
Term5/Databases/Labs/lab1/: Cargo.toml  compose.yaml  settings.yml
Term5/Databases/Labs/lab1/migrations/: 20240929102711_initial_create.sql
Term5/Databases/Labs/lab1/src/: app.rs  db.rs  main.rs  settings.rs
Term5/Databases/lab6/: Cargo.toml  docker-compose.yaml
Term5/Databases/lab6/src/: app.rs  images.rs  main.rs
Term5/Databases/lab6/templates/: images.html  index.html
Term5/Java/: .gitignore  shell.nix
Term5/System Modelling/: course-work.odt
Term6/AI/: pyproject.toml
Term6/AI/course-project/: Cargo.toml  justfile  pyproject.toml
Term6/AI/course-project/src/: app.rs  config.rs  main.rs  routes.rs  templates.rs
Term6/AI/course-project/src/backend/: __init__.py
Term6/AI/course-project/src/backend/templates/: index.html
Term6/AI/labs/: .gitignore  pyproject.toml
Term6/AI/labs/lab-1/: report.docx
Term6/AI/labs/lab-10/: lab.ipynb  title.docx
Term6/AI/labs/lab-11/: lab.ipynb  title.docx
Term6/AI/labs/lab-2/: semantic-net.drawio
Term6/AI/labs/lab-3/: lab.ipynb  title.docx
Term6/AI/labs/lab-6/: lab.ipynb  title.docx
Term6/AI/labs/lab-7/: lab.ipynb  title.docx
Term6/AI/labs/lab-8/: lab.ipynb  title.docx
Term6/AI/labs/lab-9/: lab.ipynb  title.docx
Term6/CIS/: task1-process.puml  task1.docx  task2.docx  task3.docx  task4.docx  task5.docx  task6.pptx  task7.pptx  task8.pptx
Term7/Reliability/: common.typ  justfile  practice-2.typ  practice-3.typ  practice-4.typ  practice-5.typ  practice-6-7.typ  practice-8.typ  template.typ
Term8/HumanMachineInteraction/: lab-1.typ  template.typ
Term8/MetrologyStandardizationCertification/: .gitignore  bibliography.yml  justfile  template.typ
(+858 files in other folders)
