[workspace]
members = [
    "framework",
    "lab1",
    "web",
]
resolver = "2"

[workspace.dependencies]
cfg-if = "1"
log = "0.4"
wgpu = "23.0"
winit = { version = "0.29" }

# wasm32 dependencies
console_error_panic_hook = "0.1.7"
console_log = "1"
js-sys = "0.3.70"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-test = "0.3"
web-sys = "0.3.74"
web-time = "0.2.4"
