[workspace]
members = [
    "course-project",
    "framework",
    "lab1",
    "lab2",
    "lab3",
    "web",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.21.0", features = ["derive"] }
cgmath = "0.18.0"
cfg-if = "1"
lazy_static = "1.5.0"
log = "0.4"
wgpu = "23.0"
winit = { version = "0.29" }
image = { version = "0.25.5", default-features = false, features = ["png"]}

# native dependencies
env_logger = "0.11.6"

# wasm32 dependencies
console_error_panic_hook = "0.1.7"
console_log = "1"
js-sys = "0.3.70"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-test = "0.3"
web-sys = "0.3.74"
web-time = "0.2.4"
