[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
cfg-if.workspace = true
log.workspace = true
pollster = "0.4.0"
wgpu.workspace = true
winit.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
# We need these features in the framework examples and tests
web-sys = { workspace = true, features = [
        "Location",
        "Blob",
        "RequestInit",
        "RequestMode",
        "Request",
        "ImageData",
        "Response",
        "HtmlImageElement",
        "WebGl2RenderingContext",
        "CanvasRenderingContext2d", 
] }
