[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

[dependencies]
framework = { path = "../framework" }

bytemuck.workspace = true
lazy_static.workspace = true
wgpu.workspace = true
winit.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true
