[package]
name = "web"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.stylance]
output_file = "./public/bundle.scss"
folders = ["./src/"]

[dependencies]
framework = { path = "../framework" }
lab1 = { path = "../lab1" }
lab2 = { path = "../lab2" }
lab3 = { path = "../lab3" }
course-project = { path = "../course-project" }

console_log.workspace = true
log.workspace = true
anyhow.workspace = true
winit.workspace = true
web-sys = { workspace = true, features = ["HtmlCanvasElement", "HtmlDivElement", "Location"] }
wgpu = { workspace = true, features = ["vulkan-portability"] }

console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.0", features = ["csr"] }
leptos_router = "0.7.0"
stylance = "0.5.3"

