[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Albert Shefner", email = "usn0emo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "mypy>=1.15.0",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]

[project.scripts]
backend = "backend:main"
# serve = "uvicorn backend:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
