[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
askama = { version = "0.12.1", features = ["with-axum"] }
axum = "0.7.7"
chrono = "0.4.38"
config = "0.14.0"
features = "0.10.0"
openssl = { version = "0.10.66", features = ["vendored"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v7"] }
